# TP

./: CMakeLists.txt  README.md  architecture.txt  config.ini  main.cpp  script.sh  wipe.sh
game/: CMakeLists.txt  architecture.txt
game/cmake/: googletest.cmake
game/src/: CArmy.cpp  CArmy.h
game/src/Boss/: Boss.cpp
game/src/Factories/: HumanFactory.cpp  HumanFactory.h
game/src/Maze/: MazeCell.cpp  MazeCell.h
game/src/Units/: Unit.cpp
raspberry_pi/: run.sh  script.sh  wipe.sh
src/: CArmy.cpp  CArmy.h  CMakeLists.txt  Game.cpp  Game.h
src/Boss/: Boss.cpp  Boss.h
src/Commands/: Command.h  ParseKey.cpp  ParseKey.h
src/Commands/BaseCommands/: BuyBaseUnits.cpp  BuyBaseUnits.h
src/Commands/GameCommands/: QuitGame.cpp  QuitGame.h
src/Commands/MazeCommands/: MazeCommands.cpp  MazeCommands.h
src/Commands/SlotCommands/: SlotMerge.cpp  SlotMerge.h
src/Factories/: CArmyFactory.h  ElfFactory.cpp  ElfFactory.h  GoblinFactory.cpp  GoblinFactory.h  HumanFactory.cpp  HumanFactory.h  OrcFactory.cpp  OrcFactory.h
src/FactoryUpgrades/: BaseDecorator.cpp  BaseDecorator.h  FactoryDecorator.cpp  FactoryDecorator.h
src/Maze/: DSU.cpp  DSU.h  Maze.cpp  Maze.h  MazeCell.cpp  MazeCell.h
src/Spells/: Spell.cpp  Spell.h
src/Units/: CompositeUnit.cpp  CompositeUnit.h  Unit.cpp  Unit.h
task1/: script
task2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
task2/A/: preparing.py
task2/B/: CMakeLists.txt  Makefile  cmake_install.cmake
task2/C/: main.cpp  main.h
test/: CMakeLists.txt  main.cpp  test.cpp
